# yuddha

./: CMakeLists.txt  README.md  build.sh
design/: DESIGN.md  mote.md  soul.md  world.md
src/: main.cpp  mote.cpp  mote.h  soul.cpp  soul.h  world.cpp  world.h
